feat: modal window

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
   <title>Hometask #1 | JavaScript</title>
 </head>
 <body>
-  <div class="todos_wrapper">
+  <div class="app_wrapper">
     <div id="openTodos"></div>
     <div id="statistics"></div>
   </div>
+  <div class="modal"></div>
 </body>
 </html>
